feat: refactor order service architecture, specifications and integration tests